--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Health Care</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="no_data">No Data</string>
+    <string name="no_exercise">Start adding exercises now!</string>
+    <string name="no_task">Start adding tasks now!</string>
 
     <string name="title">Title</string>
     <string name="exeName">Exercise Name</string>
@@ -14,6 +16,7 @@
     <string name="add">Add</string>
     <string name="save">Save</string>
     <string name="delete">Delete</string>
+    <string name="about">This application allows the user to create their personal exercise schedule which include custom and exercises and tasks </string>
 
     <string-array name="priorities">
         <item>High Priority</item>
