--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,9 +16,9 @@
     <string name="add">Add</string>
     <string name="save">Save</string>
     <string name="delete">Delete</string>
-    <string name="about">This application allows the user to create their personal exercise schedule which include custom and exercises and tasks </string>
+    <string name="about">This application allows the user to create their personal exercise schedule which include custom exercises and tasks </string>
     <string name="Krutik">Developer - Krutik Parikh</string>
-    <string name="Nath">Developer - Nathenial Kawal</string>
+    <string name="Nath">Developer - Nathaniel Kawal</string>
 
     <string-array name="priorities">
         <item>High Priority</item>
